Add Maven Shade Plugin configuration to pom.xml